--- a/index.html
+++ b/index.html
@@ -1,208 +1,209 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>曹先生智能问答</title>
     <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      html, body {
-        height: 100%;
-        font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-        overflow: hidden;
-      }
-      .video-bg {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        object-fit: cover;
-        z-index: -1;
-      }
-      .chat-container {
-        position: absolute;
-        top: 17vh;
-        right: 7vw;
-        height: 76vh;
-        width: 50vw;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        backdrop-filter: blur(12px);
-        background: rgba(255, 255, 255, 0.3);
-        box-shadow: -4px 0 20px rgba(0, 0, 0, 0.1);
-        border-radius: 20px;
-      }
-      .messages {
-        flex: 1;
-        overflow-y: auto;
-        padding-right: 10px;
-      }
-      .message {
-        margin-bottom: 12px;
-        background: rgba(255, 255, 255, 0.8);
-        padding: 10px 14px;
-        border-radius: 12px;
-        max-width: 90%;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-        cursor: pointer;
-      }
-      .input-area {
-        display: flex;
-        gap: 10px;
-        align-items: center;
-        padding-top: 10px;
-      }
-      .input-area input {
-        flex: 1;
-        padding: 12px;
-        font-size: 16px;
-        border-radius: 999px;
-        border: none;
-        outline: none;
-      }
-      .input-area button {
-        padding: 10px 18px;
-        border: none;
-        border-radius: 999px;
-        background-color: #d4237a;
-        color: white;
-        cursor: pointer;
-        font-weight: bold;
-      }
-      .quick-question-btn {
-        padding: 8px 12px;
-        background: white;
-        border: 1px solid #ccc;
-        border-radius: 999px;
-        cursor: pointer;
-        font-size: 14px;
-        margin-top: 8px;
-      }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        html, body {
+            height: 100%;
+            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+            overflow: hidden;
+        }
+        .video-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            object-fit: cover;
+            z-index: -1;
+        }
+        .chat-container {
+            position: absolute;
+            top: 17vh;
+            right: 7vw;
+            height: 76vh;
+            width: 50vw;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            backdrop-filter: blur(12px);
+            background: rgba(255, 255, 255, 0.3);
+            box-shadow: -4px 0 20px rgba(0, 0, 0, 0.1);
+            border-radius: 20px;
+        }
+        .messages {
+            flex: 1;
+            overflow-y: auto;
+            padding-right: 10px;
+        }
+        .message {
+            margin-bottom: 12px;
+            background: rgba(255, 255, 255, 0.8);
+            padding: 10px 14px;
+            border-radius: 12px;
+            max-width: 90%;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+        }
+        .input-area {
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            padding-top: 10px;
+        }
+        .input-area input {
+            flex: 1;
+            padding: 12px;
+            font-size: 16px;
+            border-radius: 999px;
+            border: none;
+            outline: none;
+        }
+        .input-area button {
+            padding: 10px 18px;
+            border: none;
+            border-radius: 999px;
+            background-color: #d4237a;
+            color: white;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        .quick-question-btn {
+            padding: 8px 12px;
+            background: white;
+            border: 1px solid #ccc;
+            border-radius: 999px;
+            cursor: pointer;
+            font-size: 14px;
+            margin-top: 8px;
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <video class="video-bg" src="video.mov" autoplay muted loop></video>
     <div class="chat-container">
-      <div class="messages" id="chat-box">
-        <div class="message">您好，请叫我曹先生</div>
-        <div class="message quick">🔍 红楼梦中有哪些美食？</div>
-        <div class="message quick">🔍 红楼梦中有哪些判词？</div>
-        <div class="message quick">🔍 红楼梦中有哪些故事？</div>
-        <div class="message quick">🔍 大梦·红楼有哪些值得一看的亮点？</div>
-        <div class="message quick">🔍 大梦·红楼和其他红楼梦演出有哪些不同？</div>
-        <div class="message quick">🔍 你是曹雪芹吗？你是如何AI重生的？</div>
-      </div>
-      <div class="input-area">
-        <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
-        <button onclick="sendMessage()">发送</button>
-      </div>
+        <div class="messages" id="chat-box">
+            <div class="message">您好，请叫我曹先生</div>
+            <div class="message quick">🔍 红楼梦中有哪些美食？</div>
+            <div class="message quick">🔍 红楼梦中有哪些判词？</div>
+            <div class="message quick">🔍 红楼梦中有哪些故事？</div>
+            <div class="message quick">🔍 大梦·红楼有哪些值得一看的亮点？</div>
+            <div class="message quick">🔍 大梦·红楼和其他红楼梦演出有哪些不同？</div>
+            <div class="message quick">🔍 你是曹雪芹吗？你是如何AI重生的？</div>
+        </div>
+        <div class="input-area">
+            <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
+            <button onclick="sendMessage()">发送</button>
+        </div>
     </div>
 
     <script>
-      async function sendMessage() {
-        const input = document.getElementById("user-input");
-        const question = input.value.trim();
-        if (!question) return;
+        async function sendMessage() {
+            const input = document.getElementById("user-input");
+            const question = input.value.trim();
+            if (!question) return;
 
-        const chatBox = document.getElementById("chat-box");
+            const chatBox = document.getElementById("chat-box");
 
-        // 用户提问消息
-        const userMsg = document.createElement("div");
-        userMsg.className = "message";
-        userMsg.textContent = question;
-        chatBox.appendChild(userMsg);
+            // 用户提问消息
+            const userMsg = document.createElement("div");
+            userMsg.className = "message";
+            userMsg.textContent = question;
+            chatBox.appendChild(userMsg);
 
-        // 回答消息占位
-        const responseMsg = document.createElement("div");
-        responseMsg.className = "message";
-        responseMsg.textContent = "思考中...";
-        chatBox.appendChild(responseMsg);
+            // 回答消息占位
+            const responseMsg = document.createElement("div");
+            responseMsg.className = "message";
+            responseMsg.textContent = "思考中...";
+            chatBox.appendChild(responseMsg);
 
-        input.value = "";
-        chatBox.scrollTop = chatBox.scrollHeight;
-
-        try {
-          const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ question })
-          });
-
-          const reader = res.body.getReader();
-          const decoder = new TextDecoder("utf-8");
-          let fullText = "";
-
-          while (true) {
-            const { done, value } = await reader.read();
-            if (done) break;
-            const chunk = decoder.decode(value, { stream: true });
-
-            const lines = chunk.split("\n").filter(line => line.startsWith("data: "));
-            for (const line of lines) {
-              const jsonStr = line.replace(/^data:\s*/, "");
-              try {
-                const json = JSON.parse(jsonStr);
-                const content = json.data || json.content || json.answer || "";
-                fullText += content;
-                responseMsg.textContent = fullText;
-                chatBox.scrollTop = chatBox.scrollHeight;
-              } catch (e) {
-                console.warn("解析失败：", jsonStr);
-              }
-            }
-          }
-
-          // ✅ 提取 quick_question 标签内容
-          const matches = [...fullText.matchAll(/<quick_question>(.*?)<\/quick_question>/g)];
-          if (matches.length > 0) {
-            responseMsg.textContent = fullText.replace(/<quick_question>.*?<\/quick_question>/g, "").trim();
-
-            const btnContainer = document.createElement("div");
-            btnContainer.style.display = "flex";
-            btnContainer.style.flexWrap = "wrap";
-            btnContainer.style.marginTop = "8px";
-            btnContainer.style.gap = "6px";
-
-            for (let m of matches) {
-              const btn = document.createElement("div");
-              btn.className = "quick-question-btn";
-              btn.textContent = m[1].trim();
-              btn.onclick = () => {
-                const input = document.getElementById("user-input");
-                input.value = btn.textContent;
-                input.focus();
-              };
-              btnContainer.appendChild(btn);
-            }
-
-            chatBox.appendChild(btnContainer);
+            input.value = "";
             chatBox.scrollTop = chatBox.scrollHeight;
-          }
 
-        } catch (err) {
-          console.error(err);
-          responseMsg.textContent = "网络错误，请稍后重试。";
+            try {
+                const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ question })
+                });
+
+                const reader = res.body.getReader();
+                const decoder = new TextDecoder("utf-8");
+                let fullText = "";
+
+                while (true) {
+                    const { done, value } = await reader.read();
+                    if (done) break;
+                    const chunk = decoder.decode(value, { stream: true });
+
+                    const lines = chunk.split("\n").filter(line => line.startsWith("data: "));
+                    for (const line of lines) {
+                        const jsonStr = line.replace(/^data:\s*/, "");
+                        try {
+                            const json = JSON.parse(jsonStr);
+                            const content = json.data || json.content || json.answer || "";
+                            fullText += content;
+                            responseMsg.textContent = fullText;
+                            chatBox.scrollTop = chatBox.scrollHeight;
+                        } catch (e) {
+                            console.warn("解析失败：", jsonStr);
+                        }
+                    }
+                }
+
+                // ✅ 提取 quick_question 标签内容
+                const matches = [...fullText.matchAll(/<quick_question>(.*?)<\/quick_question>/g)];
+                if (matches.length > 0) {
+                    responseMsg.textContent = fullText.replace(/<quick_question>.*?<\/quick_question>/g, "").trim();
+
+                    const btnContainer = document.createElement("div");
+                    btnContainer.style.display = "flex";
+                    btnContainer.style.flexWrap = "wrap";
+                    btnContainer.style.marginTop = "8px";
+                    btnContainer.style.gap = "6px";
+
+                    for (let m of matches) {
+                        const btn = document.createElement("div");
+                        btn.className = "quick-question-btn";
+                        btn.textContent = m[1].trim();
+                        btn.onclick = () => {
+                            const input = document.getElementById("user-input");
+                            input.value = btn.textContent;
+                            input.focus();
+                            sendMessage();
+                        };
+                        btnContainer.appendChild(btn);
+                    }
+
+                    chatBox.appendChild(btnContainer);
+                    chatBox.scrollTop = chatBox.scrollHeight;
+                }
+
+            } catch (err) {
+                console.error(err);
+                responseMsg.textContent = "网络错误，请稍后重试。";
+            }
         }
-      }
 
-      document.getElementById("user-input").addEventListener("keydown", function (e) {
-        if ((e.ctrlKey || e.metaKey) && e.key === "Enter") sendMessage();
-      });
-
-      document.querySelectorAll(".message.quick").forEach(el => {
-        el.addEventListener("click", () => {
-          const input = document.getElementById("user-input");
-          input.value = el.textContent.replace(/^🔍\s*/, "");
-          input.focus();
+        document.getElementById("user-input").addEventListener("keydown", function (e) {
+            if ((e.ctrlKey || e.metaKey) && e.key === "Enter") sendMessage();
         });
-      });
+
+        document.querySelectorAll(".message.quick").forEach(el => {
+            el.addEventListener("click", () => {
+                const input = document.getElementById("user-input");
+                input.value = el.textContent.replace(/^🔍\s*/, "");
+                input.focus();
+            });
+        });
     </script>
-  </body>
+</body>
 </html>
